@@ -1,4 +1,3 @@
-
 #' @param expr
 #' An expression or a function generating a plot. This checks in the
 #' following orders: expression or ggplot. The ggplot
@@ -8,60 +7,48 @@
 #' @export
 rpng.new <- function(expr, filename = NULL,
                      width = 587, height = 586, units = "px", pointsize = 12,
-                     bg = "white", res = 96, interpolate = FALSE, ...)
+                     bg = "white", res = 96, ...)
 {
-  if (iam("remote"))
+  if (is.null(filename))
+    filename <- tempfile(fileext = "_r.png")
+
+  ### Open a device
+  grDevices::png(filename = filename, width = width, height = height,
+                 units = units, pointsize = pointsize, bg = bg, res = res,
+                 ...)
+  graphics::plot.new()
+  dv <- grDevices::dev.cur()
+
+  ### Assign the opened device file name
+  if (!exists(".rDevices", envir = .GlobalEnv))
+    eval(parse(text = "assign('.rDevices', list(''), envir = .GlobalEnv)"))
+
+  .GlobalEnv$.rDevices[[dv]] <- filename
+
+  ### Plot and sent to remote if expr is not NULL.
+  ### Do not check on "language", but "symbol" is ok.
+  tmp <- substitute(expr)
+  if (!is.null(tmp))
   {
-    if (is.null(filename))
-      filename <- tempfile(fileext = "_r.png")
-
-    ### Open a device
-    grDevices::png(filename = filename, width = width, height = height,
-                   units = units, pointsize = pointsize, bg = bg, res = res,
-                   ...)
-    graphics::plot.new()
-    dv <- grDevices::dev.cur()
-
-    ### Assign the opened device file name
-    if (!exists(".rDevices", envir = .GlobalEnv))
-      eval(parse(text = "assign('.rDevices', list(), envir = .GlobalEnv)"))
-
-    .GlobalEnv$.rDevices[[dv]] <- filename
-
-    ### Plot and sent to remote if expr is not NULL.
-    ### Do not check on "language", but "symbol" is ok.
-    tmp <- substitute(expr)
-    if (!is.null(tmp))
+    if (is.symbol(tmp))
     {
-      if (is.symbol(tmp))
-      {
-        if (is.function(expr))
-          expr()
-        else if (all(class(expr) == c("gg", "ggplot")))
-          print(expr)
-        else
-          eval(expr, envir = parent.frame())
-      }
+      if (is.function(expr))
+        expr()
+      else if (is.gg.ggplot(expr))
+        print(expr)
       else
         eval(expr, envir = parent.frame())
-
-      rpng.off.remote(which = dv)
     }
-  }
-  else if (iam("local"))
-  {
-    ### This will create a new device in local.
-    # grDevices::dev.new(width = round(width / res),
-    #                    height = round(height / res))
+    else
+      eval(expr, envir = parent.frame())
 
-    ### Optain the opened device from remote if expr is not NULL
-    tmp <- substitute(expr)
-    if (!is.null(tmp))
-      rpng.off.local(interpolate = interpolate)
+    ### Call rpng.off() when expr is an object or a function.
+    return(invisible(rpng.off(which = dv)))
   }
 
   invisible()
 }
+
 
 
 #' @param which
@@ -71,47 +58,34 @@ rpng.new <- function(expr, filename = NULL,
 #' @export
 rpng.off <- function(which = grDevices::dev.cur())
 {
-  if (iam("remote"))
-    rpng.off.remote(which)
-  else if (iam("local"))
-    rpng.off.local()
-
-  invisible()
-}
-
-rpng.off.remote <- function(which)
-{
-  ### Avoid null device
   if (which == 1)
   {
-    cat("dev.off(): Can not shut down device 1 (the null device).\n")
-    ### local need to know the device 1 is being closed in remote because
-    ### which may not be 1 in local. Send a NA to maintain the communication
-    ### stage.
-    remoter_send(data = NA, send.more = TRUE)
+    set.status(need_auto_rpng_off, FALSE)
+    ret <- "dev.off(): Can not shut down device 1 (the null device)."
   }
   else
   {
-    ### close a regular plot
+    set.status(need_auto_rpng_off, TRUE)
     grDevices::dev.off(which = which)
-
-    ### sent remoter device to local
-    if (exists(".rDevices", envir = .GlobalEnv) &&
-        !is.null(.GlobalEnv$.rDevices[[which]]))
-    {
-        filename <- .GlobalEnv$.rDevices[[which]]
-        img <- png::readPNG(filename)
-        remoter_send(data = img, send.more = TRUE)
-        .GlobalEnv$.rDevices[[which]] <- NULL
-    }
+    filename <- .GlobalEnv$.rDevices[[which]]
+    .GlobalEnv$.rDevices[[which]] <- ''
+    ret <- png::readPNG(filename)
   }
+
+  invisible(ret)
 }
 
-rpng.off.local <- function(interpolate = TRUE)
-{
-  img <- remoter_receive()
-  eval(parse(text = "assign('.rpng.img', img, envir = .GlobalEnv)"))
 
+
+#' @rdname rDevices_rpng
+#' @export
+dev.off <- rpng.off
+
+
+
+### This is called only when .pbdenv$status$need_auto_rpng_off is TRUE.
+auto_rpng_off_local <- function(img)
+{
   if (is.array(img))
   {
     ### Semi-transparency may not work in windows device
@@ -130,17 +104,20 @@ rpng.off.local <- function(interpolate = TRUE)
     graphics::plot(NULL, NULL, type = "n", axes = FALSE,
                    main = "", xlab = "", ylab = "",
                    xlim = c(0, img.dim[1]), ylim = c(0, img.dim[2]))
-    graphics::rasterImage(img.r, 0, 0, img.dim[1], img.dim[2],
-                          interpolate = interpolate)
+    graphics::rasterImage(img.r, 0, 0, img.dim[1], img.dim[2])
   }
-  else if (is.na(img))
-    cat("dev.off(): Can not shut down device 1 (the null device).\n")
   else
+  {
+    eval(parse(text = "assign('.rpng.img', img, envir = .GlobalEnv)"))
     cat("Check .GlobalEnv$.rpng.img for the incorrect (raster) image.\n")
+  }
 }
 
 
-#' @rdname rDevices_rpng
-#' @export
-dev.off <- rpng.off
+
+is.gg.ggplot <- function(x)
+{
+  all(class(x) == c("gg", "ggplot"))
+}
+
 
