@@ -1,8 +1,10 @@
 Release 0.3-3 (//):
   * Fix warning precedence for small port values.
   * Fix client timer printing.
-  * Add rrDevices functions.
-  * Add rrpng().
+  * Add rDevices functions.
+  * Add rpng() and its utility functions.
+  * Add need_auto_rpng_off option to the status to inform client.
+  * Add ggplot2 support including print.ggplot() without dependency.
 
 Release 0.3-2 (4/28/2016):
   * Minor internal cleanup.
